--- a/main.html
+++ b/main.html
@@ -7,6 +7,11 @@
     <title>Document</title>
 </head>
 <body>
+    <input id="newTodoInput" />
+    <button id="addTodoBtn">Add todo</button>
+    <!-- your javascript must add todos inside the following tag as <li> tags! -->
+    <ol id="todoList"></ol>
+    <script type="text/javascript" src="./script.js"></script>
     <!-- add your code here -->
 </body>
 </html>
